# oc-history

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: Changelog.md  Implementation-plan.md  Stage-v05.md
src/: claude.rs  cli.rs  config.rs  debug.rs  debug_log.rs  error.rs  main.rs  pager.rs  tool_format.rs  update.rs
src/history/: cache.rs  global_log.rs  loader.rs  mod.rs  parser.rs
src/opencode/: client.rs  loader.rs  mod.rs  models.rs  sse.rs
src/tui/: app.rs  export.rs  mod.rs  theme.rs  ui.rs  viewer.rs
